[gd_scene load_steps=6 format=3 uid="uid://bbwhtlk15abxa"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_224c0"]
[ext_resource type="Script" path="res://scripts/worlds.gd" id="2_6i0vr"]

[sub_resource type="Gradient" id="Gradient_skhgw"]
interpolation_mode = 2
colors = PackedColorArray(0.440336, 0.440336, 0.440336, 1, 0.37918, 0.37918, 0.37918, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_0peb1"]
fractal_type = 3
fractal_ping_pong_strength = 0.837

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ewhrs"]
color_ramp = SubResource("Gradient_skhgw")
noise = SubResource("FastNoiseLite_0peb1")

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_224c0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_ewhrs")

[node name="Menus" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleScreen" type="Control" parent="Menus"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitlescreenButtons" type="VBoxContainer" parent="Menus/TitleScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Spacer1" type="Control" parent="Menus/TitleScreen/TitlescreenButtons"]
layout_mode = 2
size_flags_vertical = 3

[node name="MenuTitle" type="RichTextLabel" parent="Menus/TitleScreen/TitlescreenButtons"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center][rainbow freq=0.0075 sat=0.75 val=0.75][wave freq=2 amp=50]Hatchetflare[/wave][/rainbow][/center]"
fit_content = true
autowrap_mode = 0

[node name="Spacer2" type="Control" parent="Menus/TitleScreen/TitlescreenButtons"]
layout_mode = 2
size_flags_vertical = 3

[node name="StartWorld" type="Button" parent="Menus/TitleScreen/TitlescreenButtons"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Start World"

[node name="JoinWorld" type="Button" parent="Menus/TitleScreen/TitlescreenButtons"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Join World"

[node name="Settings" type="Button" parent="Menus/TitleScreen/TitlescreenButtons"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Settings"

[node name="Credits" type="Button" parent="Menus/TitleScreen/TitlescreenButtons"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Credits"

[node name="Quit" type="Button" parent="Menus/TitleScreen/TitlescreenButtons"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="Spacer3" type="Control" parent="Menus/TitleScreen/TitlescreenButtons"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="WorldsScreen" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_6i0vr")

[node name="WorldSelect" type="VBoxContainer" parent="Menus/WorldsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuTitle" type="RichTextLabel" parent="Menus/WorldsScreen/WorldSelect"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Worlds List[/center]"
fit_content = true
autowrap_mode = 0

[node name="BackButton" type="HBoxContainer" parent="Menus/WorldsScreen/WorldSelect"]
layout_mode = 2

[node name="Back" type="Button" parent="Menus/WorldsScreen/WorldSelect/BackButton"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="Worlds" type="ItemList" parent="Menus/WorldsScreen/WorldSelect"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_vertical = 3
item_count = 4
item_0/text = "Saved worlds will be listed here"
item_1/text = "Formatting is subject to change"
item_2/text = "Some buttons may not work"
item_3/text = "(Theoretically this list should have a scrollbar if it has enough items)"

[node name="Toggles" type="HBoxContainer" parent="Menus/WorldsScreen/WorldSelect"]
layout_mode = 2

[node name="AllowPlayers" type="CheckButton" parent="Menus/WorldsScreen/WorldSelect/Toggles"]
layout_mode = 2
text = "Host Multiplayer"

[node name="AsServer" type="CheckButton" parent="Menus/WorldsScreen/WorldSelect/Toggles"]
layout_mode = 2
disabled = true
text = "Host without playing"

[node name="WorldButtons" type="HBoxContainer" parent="Menus/WorldsScreen/WorldSelect"]
layout_mode = 2

[node name="NewWorld" type="Button" parent="Menus/WorldsScreen/WorldSelect/WorldButtons"]
layout_mode = 2
text = "New World"

[node name="DeleteWorld" type="Button" parent="Menus/WorldsScreen/WorldSelect/WorldButtons"]
layout_mode = 2
text = "Delete World"

[node name="Play" type="Button" parent="Menus/WorldsScreen/WorldSelect/WorldButtons"]
layout_mode = 2
text = "Play"

[node name="NewWorldPopup" type="Panel" parent="Menus/WorldScreen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Menus/WorldScreen/NewWorldPopup"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 23.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center]Name new world[/center]"
fit_content = true

[node name="TextEdit" type="TextEdit" parent="Menus/WorldScreen/NewWorldPopup"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -18.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "World name"

[node name="Okay" type="Button" parent="Menus/WorldScreen/NewWorldPopup"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -31.0
offset_right = 48.0
grow_vertical = 0
text = "Okay"

[node name="Cancel" type="Button" parent="Menus/WorldScreen/NewWorldPopup"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -60.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Cancel"

[node name="MultiplayerScreen" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Multiplayer" type="VBoxContainer" parent="Menus/MultiplayerScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuTitle" type="RichTextLabel" parent="Menus/MultiplayerScreen/Multiplayer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]Server IPs List[/center]"
fit_content = true
autowrap_mode = 0

[node name="BackButton" type="HBoxContainer" parent="Menus/MultiplayerScreen/Multiplayer"]
layout_mode = 2

[node name="Back" type="Button" parent="Menus/MultiplayerScreen/Multiplayer/BackButton"]
layout_mode = 2
size_flags_horizontal = 0
text = "Back"

[node name="SavedServersList" type="ItemList" parent="Menus/MultiplayerScreen/Multiplayer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
size_flags_vertical = 3
item_count = 4
item_0/text = "Saved servers will go here"
item_1/text = "The style of everything is subject to change"
item_2/text = "Some buttons may not work"
item_3/text = "Scrollbar test."

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/MultiplayerScreen/Multiplayer"]
layout_mode = 2

[node name="IP" type="LineEdit" parent="Menus/MultiplayerScreen/Multiplayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Server IP"

[node name="Name" type="LineEdit" parent="Menus/MultiplayerScreen/Multiplayer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Server Name"

[node name="Server Buttons" type="HBoxContainer" parent="Menus/MultiplayerScreen/Multiplayer"]
layout_mode = 2

[node name="AddServer" type="Button" parent="Menus/MultiplayerScreen/Multiplayer/Server Buttons"]
layout_mode = 2
text = "Add Server"

[node name="RemoveServer" type="Button" parent="Menus/MultiplayerScreen/Multiplayer/Server Buttons"]
layout_mode = 2
text = "Remove Server"

[node name="JoinGame" type="Button" parent="Menus/MultiplayerScreen/Multiplayer/Server Buttons"]
layout_mode = 2
text = "Join Game"

[node name="Control" type="Control" parent="Menus/MultiplayerScreen/Multiplayer/Server Buttons"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SettingsScreen" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleText" type="RichTextLabel" parent="Menus/SettingsScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -157.0
offset_top = 69.0
offset_right = 157.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 50
bbcode_enabled = true
text = "[center]There is no need to change anything.
The game is perfect as it is.[/center]"
fit_content = true
autowrap_mode = 0

[node name="SettingsButtons" type="VBoxContainer" parent="Menus/SettingsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Back" type="Button" parent="Menus/SettingsScreen/SettingsButtons"]
layout_mode = 2
text = "Back"

[node name="CreditsScreen" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleText" type="RichTextLabel" parent="Menus/CreditsScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -402.0
offset_top = 69.0
offset_right = 402.0
offset_bottom = 120.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 6
theme_override_constants/shadow_offset_y = 6
theme_override_constants/outline_size = 4
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Hatchetflare is made possible by these lovely people:"
fit_content = true
autowrap_mode = 0

[node name="Credits" type="RichTextLabel" parent="Menus/CreditsScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -122.0
offset_top = -138.0
offset_right = 122.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 5
theme_override_constants/shadow_offset_y = 5
theme_override_constants/outline_size = 4
bbcode_enabled = true
text = "Lead creative designer:
	[rainbow freq=0.1][wave]Pixer Pinecone[/wave][/rainbow]
Developers:
	[color=orange][wave]Jcodefox[/wave][/color]
	[wave]SteveMC[/wave]
Playtesters:
	[wave]Blitceed[/wave]
	[wave]LandOcto950[/wave]
	[wave]Redstone[/wave]
Other contributions:
	[wave]Stranded Software Developer[/wave]"
fit_content = true
autowrap_mode = 0

[node name="Back" type="Button" parent="Menus/CreditsScreen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -22.0
offset_top = -119.0
offset_right = 23.0
offset_bottom = -88.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="NetworkInfoOverlay" type="Control" parent="Menus"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Menus/NetworkInfoOverlay"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.309804, 0.309804, 0.309804, 0.901961)

[node name="RichTextLabel" type="RichTextLabel" parent="Menus/NetworkInfoOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
fit_content = true
autowrap_mode = 0

[node name="BackButton" type="Button" parent="Menus/NetworkInfoOverlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.0
offset_top = 54.0
offset_right = 23.0
offset_bottom = 85.0
grow_horizontal = 2
grow_vertical = 2
text = "Back"

[connection signal="pressed" from="Menus/TitleScreen/TitlescreenButtons/StartWorld" to="." method="open_screen" binds= ["WorldsScreen"]]
[connection signal="pressed" from="Menus/TitleScreen/TitlescreenButtons/JoinWorld" to="." method="open_screen" binds= ["MultiplayerScreen"]]
[connection signal="pressed" from="Menus/TitleScreen/TitlescreenButtons/Settings" to="." method="open_screen" binds= ["SettingsScreen"]]
[connection signal="pressed" from="Menus/TitleScreen/TitlescreenButtons/Credits" to="." method="open_screen" binds= ["CreditsScreen"]]
[connection signal="pressed" from="Menus/TitleScreen/TitlescreenButtons/Quit" to="." method="quit"]
[connection signal="pressed" from="Menus/WorldsScreen/WorldSelect/BackButton/Back" to="." method="open_screen" binds= ["TitleScreen"]]
[connection signal="toggled" from="Menus/WorldsScreen/WorldSelect/Toggles/AllowPlayers" to="." method="toggle_multiplayer_joining"]
[connection signal="pressed" from="Menus/WorldsScreen/WorldSelect/WorldButtons/Play" to="." method="start_game"]
[connection signal="pressed" from="Menus/MultiplayerScreen/Multiplayer/BackButton/Back" to="." method="open_screen" binds= ["TitleScreen"]]
[connection signal="pressed" from="Menus/MultiplayerScreen/Multiplayer/Server Buttons/JoinGame" to="." method="start_game"]
[connection signal="pressed" from="Menus/SettingsScreen/SettingsButtons/Back" to="." method="open_screen" binds= ["TitleScreen"]]
[connection signal="pressed" from="Menus/CreditsScreen/Back" to="." method="open_screen" binds= ["TitleScreen"]]
[connection signal="pressed" from="Menus/NetworkInfoOverlay/BackButton" to="." method="network_status_update" binds= ["Pressed back button", false, false]]
